--- a/less/palett.less
+++ b/less/palett.less
@@ -2,9 +2,9 @@
 
 @primaryColor:#23262D;
 @secondaryColor:#313139;
-@bgColor:#19191B;
+@bgColor:lighten(#19191B,2%);
 @assentColor:#01AEF0;
-@Color:#696A6F;
+@Color:#b6b6b6;
 @blue:#01AEF0;
 @white:#fff;
 @black:#000;
@@ -13,5 +13,5 @@
 @yellow:#F6B156;
 @orange:#F78E57;
 @gray:#515257;
-@lightGray:#999;
+@lightGray:#99999916;
 @darkGray:#3D3D3D;
