--- a/less/dasboard.less
+++ b/less/dasboard.less
@@ -1,3 +1,5 @@
+// out:false
+
 @import "./palett.less";
 
 .DashboardContainer {
@@ -12,7 +14,7 @@
 
 .Dashboard_KPI {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -26,13 +28,13 @@
   }
 }
 
-.UsersAsiment {
+.UsersAsigment {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 10px;
+  gap: 40px;
 
   .Users {
     width: 100%;
@@ -50,7 +52,7 @@
   width: 100%;
   height: 100%;
   background-color: @primaryColor;
-  font-size: 1.3rem;
+  font-size: 1rem;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
 }
@@ -104,7 +106,7 @@
     padding: 10px 70px;
     justify-content: left;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: bold;
     text-align: center;
     border-bottom-left-radius: 20px;
@@ -148,4 +150,116 @@
       }
     }
   }
+}
+
+//==================================================================//
+//                        USSERASIGMENT                             //
+//==================================================================//
+
+.UserCards {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: @primaryColor;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  
+
+  .UserName {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    
+  }
+}
+.UserIcons {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  display: flex;
+  width: 80px;
+  height: 80px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  background-color: @green;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;  
+  color: @white;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 50%;
+  border-top-right-radius: 50%;
+  box-shadow: 0 0 10px 0 rgba(0, 255, 0, 0.445);
+
+  .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 50%;
+    border-top-right-radius: 50%;
+    background-color: @white;
+    color: black;
+  }
+}
+
+.UserText {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  padding: 10px 20px 0 80px;
+  border: 1px solid @yellow;
+  justify-content: left;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+  border-bottom-left-radius: 20px;
+  
+}
+.UserData{
+  display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 10px;
+    border-bottom-left-radius: 20px;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      padding: 10px;
+      background-color: @primaryColor;
+      list-style: none;
+      border-bottom-left-radius: 20px;
+
+      li {
+        display: flex;
+        padding: 1px;
+
+        &:nth-child(odd) {
+          background-color: @lightGray;
+        }
+
+        :nth-child(1) {
+          width: 100%;
+          padding: 0 5px;
+        }
+        :nth-child(2) {
+          width: 50;
+          font-weight: 700;
+          padding: 0 5px;
+        }
+      }
+    }
 }
