--- a/less/index.less
+++ b/less/index.less
@@ -11,12 +11,12 @@ body {
   background-color: @bgColor;
   padding: 10px;
   color: @Color;
-  font-size: 1.5em;
+  font-size: 1rem;
   font-family: rajdhani;
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 1, "opsz" 48;
+  font-variation-settings: "FILL" 1, "wght" 500, "GRAD" 1, "opsz" 48;
 }
 
 
@@ -102,6 +102,8 @@ aside {
         a {
           text-decoration: none;
           color: @Color;
+          background-color: @primaryColor;
+          
         }
         div {
           display: flex;
@@ -110,7 +112,8 @@ aside {
           justify-content: center;
           width: 100%;
           height: 115px;
-          padding: 8px;      
+          padding: 8px;    
+          transition: background-color 0.5s ease;  
           cursor: pointer;                    
           :nth-child(1) {
             font-size: 2rem;
