--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,11 @@ body {
   background-color: #1e1e20;
   padding: 10px;
   color: #b6b6b6;
-  font-size: 1.5em;
+  font-size: 1rem;
   font-family: rajdhani;
 }
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 1, "opsz" 48;
+  font-variation-settings: "FILL" 1, "wght" 500, "GRAD" 1, "opsz" 48;
 }
 .AppContainer {
   display: grid;
@@ -87,6 +87,7 @@ aside nav ul {
 aside nav ul li a {
   text-decoration: none;
   color: #b6b6b6;
+  background-color: #23262D;
 }
 aside nav ul li div {
   display: flex;
@@ -96,6 +97,7 @@ aside nav ul li div {
   width: 100%;
   height: 115px;
   padding: 8px;
+  transition: background-color 0.5s ease;
   cursor: pointer;
 }
 aside nav ul li div :nth-child(1) {
@@ -120,7 +122,7 @@ main {
 }
 .Dashboard_KPI {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -132,15 +134,15 @@ main {
   background-color: #23262D;
   border: 1px solid #F6B156;
 }
-.UsersAsiment {
+.UsersAsigment {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 10px;
+  gap: 40px;
 }
-.UsersAsiment .Users {
+.UsersAsigment .Users {
   width: 100%;
   height: 200px;
   background-color: #23262D;
@@ -150,7 +152,7 @@ main {
   width: 100%;
   height: 100%;
   background-color: #23262D;
-  font-size: 1.3rem;
+  font-size: 1rem;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
 }
@@ -201,7 +203,7 @@ main {
   padding: 10px 70px;
   justify-content: left;
   align-items: center;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: bold;
   text-align: center;
   border-bottom-left-radius: 20px;
@@ -226,7 +228,7 @@ main {
 }
 .CardContainer .CardInfo ul li {
   display: flex;
-  padding: 1px ;
+  padding: 1px;
 }
 .CardContainer .CardInfo ul li:nth-child(odd) {
   background-color: #99999916;
@@ -236,6 +238,102 @@ main {
   padding: 0 5px;
 }
 .CardContainer .CardInfo ul li :nth-child(2) {
+  width: 50;
+  font-weight: 700;
+  padding: 0 5px;
+}
+.UserCards {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #23262D;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+.UserCards .UserName {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.UserIcons {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  display: flex;
+  width: 80px;
+  height: 80px;
+  font-size: 2.5rem;
+  background-color: #6FC308;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #fff;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 50%;
+  border-top-right-radius: 50%;
+  box-shadow: 0 0 10px 0 rgba(0, 255, 0, 0.445);
+}
+.UserIcons .circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 50%;
+  border-top-right-radius: 50%;
+  background-color: #fff;
+  color: black;
+}
+.UserText {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  padding: 10px 20px 0 80px;
+  border: 1px solid #F6B156;
+  justify-content: left;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+  border-bottom-left-radius: 20px;
+}
+.UserData {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 10px;
+  border-bottom-left-radius: 20px;
+}
+.UserData ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: #23262D;
+  list-style: none;
+  border-bottom-left-radius: 20px;
+}
+.UserData ul li {
+  display: flex;
+  padding: 1px;
+}
+.UserData ul li:nth-child(odd) {
+  background-color: #99999916;
+}
+.UserData ul li :nth-child(1) {
+  width: 100%;
+  padding: 0 5px;
+}
+.UserData ul li :nth-child(2) {
   width: 50;
   font-weight: 700;
   padding: 0 5px;
