--- a/less/dasboard.less
+++ b/less/dasboard.less
@@ -9,7 +9,7 @@
   height: 100%;
   gap: 55px;
   padding: 40px;
-  background-color: rgb(74, 76, 77);
+  background-color:@bgColor
 }
 
 .Dashboard_KPI {
