--- a/less/palett.less
+++ b/less/palett.less
@@ -1,8 +1,8 @@
 // out:false
 
 @primaryColor:#23262D;
-@secondaryColor:#949497;
-@bgColor:lighten(#19191B,2%);
+@secondaryColor:#66666b2d;
+@bgColor: rgb(74, 76, 77);
 @assentColor:#01AEF0;
 @Color:#b6b6b6;
 @blue:#01AEF0;
