--- a/less/aside.less
+++ b/less/aside.less
@@ -27,23 +27,23 @@ aside {
     }
   
     nav {
-      display: flex;
+     
       width: 100%;
       height: 100%;
       justify-content: center;
-      align-items: flex-start;
+      align-items: flex-start;      
+      padding:0;
         
   
       ul {      
         list-style: none;      
         height: 100%;
-        font-weight: bold;
+        font-weight: bold;        
         li {     
+          
           a {
             text-decoration: none;
-            color: @Color;
-            background-color: @primaryColor;
-            
+            color: @Color;  
           }
           div {
             display: flex;
@@ -53,15 +53,16 @@ aside {
             width: 100%;
             height: 115px;
             padding: 8px;    
-            transition: background-color 0.5s ease;  
+            transition: background-color 0.3s ease;  
             cursor: pointer;                    
             :nth-child(1) {
               font-size: 2rem;
               padding: 5px;
             }
             &:hover {
-              background-color: @secondaryColor;
+              background-color: @gray;
               color: @assentColor;
+              font-size: 1.2rem;
             }
           }
         }     
