--- a/less/charts.less
+++ b/less/charts.less
@@ -1,1 +1,77 @@
 // out:false
+
+  //==================================================================//
+ //                       CHARTS                                     //
+//==================================================================//
+
+.charts_section{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));   
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;    
+    background-color:@lightGray;
+    .chart_title{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        height: 40px;
+        width: 100%;         
+    }
+    .charts{
+        background-color: @primaryColor;        
+    }
+}
+
+
+  //==================================================================//
+ //                       CHARTS MODAL                               //
+//==================================================================//
+
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+  }
+  
+  .modal-main {
+    position:fixed;
+    background: @primaryColor;
+    width: 60%;
+    height: auto;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    padding: 20px;
+  }
+  
+  .display-block {
+    display: block;
+  }
+  
+  .display-none {
+    display: none;
+  }
+
+  .modal-close{
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    background-color: #dddddd55;
+
+    button{
+        padding:  5px 20px;
+        
+    
+      }
+  }
