--- a/less/header.less
+++ b/less/header.less
@@ -29,155 +29,116 @@ header {
 //==================================================================//
 //                              DROPDOWN                            //
 //==================================================================//
+.iconRadius(@tl,@tr,@bl,@br){
+  border-top-left-radius: @tl;
+  border-top-right-radius: @tr;
+  border-bottom-right-radius: @br;
+  border-bottom-left-radius: @bl;
+}
+.dropdown{        
+  width: 250px;
+  position: relative;
+ 
 
-.dropdown-nav {
-  padding: 0 1rem;
-  z-index: 3;
-  font-size: 1rem;
-  ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-
-    li {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-      list-style-type: none;
-      position: relative;
-      padding: 0.625rem 0 0.5rem;
-      &:hover {
-        > .sub-menu,
-        .sub-menu .sub-items:hover {
-          display: flex;
-          visibility: visible;
-          opacity: 1;
-        }
-      }     
-
-      .icon-menu {
-        width: 40px;
-        height: 40px;
-        font-size: 1.5rem;
-        color: @Color;
-        transition: all 0.3s ease-out;
-
-        :hover {
-          color: @blue;
-          transform: scale(1);
-          cursor: pointer;
-        }
-      }
-    }
-    .avatar {
+  *{
+    box-sizing: border-box;  
+  }
+}
+.userName{        
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  .name{
+      font-size: 1.2rem;
+      font-weight: bold;
+      padding-right: 20px;
+  }
+  .userIcon{
       display: flex;
       justify-content: center;
       align-items: center;
       width: 60px;
       height: 60px;
-      border-top-left-radius: 50%;
-      border-bottom-right-radius: 50%;
-      border-bottom-left-radius: 0px;
-      border-top-right-radius: 50%;
-      box-shadow: 0 0 10px 0 rgba(0, 255, 0, 0.445);
       background-color: @blue;
-
-      .circle {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5rem;
-        font-weight: bold;
-        width: 40px;
-        height: 40px;
-        border-top-left-radius: 50%;
-        border-bottom-right-radius: 50%;
-        border-bottom-left-radius: 0px;
-        border-top-right-radius: 50%;
-        background-color: @white;
-        color: black;
+      box-shadow: 0 0 5px 0 @blue;
+      transition: box-shadow 0.3s ease-out;
+      .iconRadius(50%,50%,0px,50%);
+      .circle{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 40px;
+          height: 40px;
+          background-color: @white;
+          font-size: 1.5rem;
+          font-weight: bold;
+          color: @black;
+          .iconRadius(50%,50%,0px,50%);
       }
-    }
-    .li-username {
-      color: @Color;
-      display: inline-block;
-      width: 150px;
-      text-align: right;
-      font-size: 1.2rem;
-      font-weight: bold;
-    }    
+  }
+  &:hover .userIcon{
+      box-shadow: 0 0 15px 0 @blue;
   }
 }
 
-.sub-menu{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    background-color: @white;
-    align-items: flex-start;
-    width: 12rem;
-    right: -0.5rem;
-    top: 4.5rem;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    gap: 0;
-    padding: 1rem 0;
-    opacity: 0;
-    display: none;
-    .sub-items {
-        width: 100%;
-        .icon-menu {
-            padding: 10px 0;
-            padding-left: 20px;
-        }
-        p{
-            padding: 0 10px;
-        }
-    }
+.select-clicked{
+  border: 2px solid @green;
+  box-shadow: 0 0 10px 0 @green;
 }
 
-// ul {
-//     flex-direction: column;
-//     position: absolute;
-//     background-color: @white;
-//     align-items: flex-start;
-//     width: 12rem;
-//     right: -0.5rem;
-//     top: 4.5rem;
-//     border-top-right-radius: 20px;
-//     border-bottom-left-radius: 20px;
-//     gap: 0;
-//     padding: 1rem 0;
-//     opacity: 0;
-//     display: none;
-//     .sub-items {   
-//         width: 100%;
-//         align-items: center;
-//         gap: 0.725rem;
-//         cursor: pointer;
-//         padding: 0.5rem 1.5rem;
-      
-//         p {
-//           font-size: 1rem;
-//           font-weight: 500;
-//           margin: 0.4rem 0;
-//           color: @Color;
-//           cursor: pointer;
-//         }
-      
-//         .icon-menu {
-//           padding-left: 20px;
-//           :hover {
-//             color: @blue;
-//             transform: scale(1);
-//             cursor: pointer;
-//             p{
-//               color: @blue;
-//             }
-//           }
-//         }
-//       }
-    
-//   }
+.menu{
+  width: 200px;
+  list-style: none;
+  padding:0.5rem;
+  background-color: @primaryColor;
+  color: @Color;  
+  .iconRadius(20px,0%,0%,20px);
+  position: absolute;        
+  top: 5em;
+  left: 45%;
+  width: 100%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: all 0.5s ease ;
+  box-shadow: 0 0 5px 1px @blue;
+  z-index: 2;
+
+  li{
+      .iconRadius(10px,10px,10px,10px);
+      padding: 0.5rem 1rem;
+      transition: background-color 0.5s ease;
+      font-size: 1.2rem;
+
+      &:hover , a:hover{          
+          color: @blue;
+          background-color: @gray;
+          font-size: 1.3rem;
+      }
+
+      a{
+          display: flex;
+          justify-content: left;
+          align-items: center;
+          color:@Color;
+          text-decoration: none;
+          :nth-child(1){
+              padding-right: 1rem;
+          }
+      }
+
+  }
+
+}
+
+.active{
+  background-color: @blue;
+}
+
+.menu-open{
+  opacity: 1;
+  display: block;
+}
