--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #1e1e20;
+  background-color: #4a4c4d;
   padding: 10px;
   color: #b6b6b6;
   font-size: 1rem;
@@ -53,104 +53,114 @@ header .dropbox {
   justify-content: flex-end;
   align-items: center;
 }
-.dropdown-nav {
-  padding: 0 1rem;
-  z-index: 3;
-  font-size: 1rem;
-}
-.dropdown-nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.dropdown-nav ul li {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  list-style-type: none;
+.dropdown {
+  width: 250px;
   position: relative;
-  padding: 0.625rem 0 0.5rem;
 }
-.dropdown-nav ul li:hover > .sub-menu,
-.dropdown-nav ul li:hover .sub-menu .sub-items:hover {
+.dropdown * {
+  box-sizing: border-box;
+}
+.userName {
   display: flex;
-  visibility: visible;
-  opacity: 1;
-}
-.dropdown-nav ul li .icon-menu {
-  width: 40px;
-  height: 40px;
-  font-size: 1.5rem;
-  color: #b6b6b6;
-  transition: all 0.3s ease-out;
-}
-.dropdown-nav ul li .icon-menu:hover {
-  color: #01AEF0;
-  transform: scale(1);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
-.dropdown-nav ul .avatar {
+.userName .name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding-right: 20px;
+}
+.userName .userIcon {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60px;
   height: 60px;
+  background-color: #01AEF0;
+  box-shadow: 0 0 5px 0 #01AEF0;
+  transition: box-shadow 0.3s ease-out;
   border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 0px;
-  border-top-right-radius: 50%;
-  box-shadow: 0 0 10px 0 rgba(0, 255, 0, 0.445);
-  background-color: #01AEF0;
 }
-.dropdown-nav ul .avatar .circle {
+.userName .userIcon .circle {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
-  font-weight: bold;
   width: 40px;
   height: 40px;
+  background-color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000;
   border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 0px;
-  border-top-right-radius: 50%;
-  background-color: #fff;
-  color: black;
 }
-.dropdown-nav ul .li-username {
+.userName:hover .userIcon {
+  box-shadow: 0 0 15px 0 #01AEF0;
+}
+.select-clicked {
+  border: 2px solid #6FC308;
+  box-shadow: 0 0 10px 0 #6FC308;
+}
+.menu {
+  width: 200px;
+  list-style: none;
+  padding: 0.5rem;
+  background-color: #23262D;
   color: #b6b6b6;
-  display: inline-block;
-  width: 150px;
-  text-align: right;
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-.sub-menu {
-  display: none;
-  flex-direction: column;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 0%;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 0%;
   position: absolute;
-  background-color: #fff;
-  align-items: flex-start;
-  width: 12rem;
-  right: -0.5rem;
-  top: 4.5rem;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  gap: 0;
-  padding: 1rem 0;
-  opacity: 0;
-}
-.sub-menu .sub-items {
+  top: 5em;
+  left: 45%;
   width: 100%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: all 0.5s ease;
+  box-shadow: 0 0 5px 1px #01AEF0;
+  z-index: 2;
 }
-.sub-menu .sub-items .icon-menu {
-  padding: 10px 0;
-  padding-left: 20px;
+.menu li {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.5s ease;
+  font-size: 1.2rem;
 }
-.sub-menu .sub-items p {
-  padding: 0 10px;
+.menu li:hover,
+.menu li a:hover {
+  color: #01AEF0;
+  background-color: #515257;
+  font-size: 1.3rem;
+}
+.menu li a {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: #b6b6b6;
+  text-decoration: none;
+}
+.menu li a :nth-child(1) {
+  padding-right: 1rem;
+}
+.active {
+  background-color: #01AEF0;
+}
+.menu-open {
+  opacity: 1;
+  display: block;
 }
 aside {
   display: flex;
@@ -173,11 +183,11 @@ aside .logo img {
   width: 60px;
 }
 aside nav {
-  display: flex;
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: flex-start;
+  padding: 0;
 }
 aside nav ul {
   list-style: none;
@@ -187,7 +197,6 @@ aside nav ul {
 aside nav ul li a {
   text-decoration: none;
   color: #b6b6b6;
-  background-color: #23262D;
 }
 aside nav ul li div {
   display: flex;
@@ -197,7 +206,7 @@ aside nav ul li div {
   width: 100%;
   height: 115px;
   padding: 8px;
-  transition: background-color 0.5s ease;
+  transition: background-color 0.3s ease;
   cursor: pointer;
 }
 aside nav ul li div :nth-child(1) {
@@ -205,8 +214,9 @@ aside nav ul li div :nth-child(1) {
   padding: 5px;
 }
 aside nav ul li div:hover {
-  background-color: #949497;
+  background-color: #515257;
   color: #01AEF0;
+  font-size: 1.2rem;
 }
 main {
   grid-area: main;
@@ -232,6 +242,7 @@ main {
   min-width: 100%;
   height: 100%;
   background-color: #23262D;
+  border: 1px solid #F6B156;
 }
 .UsersAsigment {
   display: grid;
@@ -299,7 +310,7 @@ main {
   display: flex;
   width: 100%;
   height: 80px;
-  padding: 10px 10px 0 70px;
+  padding: 10px 70px;
   justify-content: left;
   align-items: center;
   font-size: 1rem;
@@ -394,7 +405,8 @@ main {
   display: flex;
   width: 100%;
   height: 80px;
-  padding: 10px 10px 0 70px;
+  padding: 10px 20px 0 80px;
+  border: 1px solid #F6B156;
   justify-content: left;
   align-items: center;
   font-size: 1rem;
@@ -435,4 +447,61 @@ main {
   width: 50;
   font-weight: 700;
   padding: 0 5px;
+}
+.charts_section {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  background-color: #99999916;
+}
+.charts_section .chart_title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  height: 40px;
+  width: 100%;
+}
+.charts_section .charts {
+  background-color: #23262D;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+}
+.modal-main {
+  position: fixed;
+  background: #23262D;
+  width: 60%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+}
+.display-block {
+  display: block;
+}
+.display-none {
+  display: none;
+}
+.modal-close {
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  background-color: #dddddd55;
+}
+.modal-close button {
+  padding: 5px 20px;
 }
