--- a/less/index.less
+++ b/less/index.less
@@ -71,6 +71,12 @@ body {
 
 @import "./charts.less";
 
+  //==================================================================//
+ //                           PROFILE                                //
+//==================================================================//
+
+@import "./profile.less";
+
 
   //==================================================================//
  //                           ((((TEST))))                           //
