--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@
 }
 body {
   background-color: #4a4c4d;
-  padding: 10px;
   color: #b6b6b6;
   font-size: 1rem;
   font-family: rajdhani;
@@ -406,7 +405,6 @@ main {
   width: 100%;
   height: 80px;
   padding: 10px 20px 0 80px;
-  border: 1px solid #F6B156;
   justify-content: left;
   align-items: center;
   font-size: 1rem;
@@ -459,16 +457,16 @@ main {
   height: 100%;
   background-color: #99999916;
 }
-.charts_section .chart_title {
+.charts_section .charts {
+  background-color: #23262D;
+}
+.chart_title {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   height: 40px;
   width: 100%;
-}
-.charts_section .charts {
-  background-color: #23262D;
 }
 .modal {
   position: fixed;
@@ -505,37 +503,161 @@ main {
 .modal-close button {
   padding: 5px 20px;
 }
+.profile {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+  padding: 10px;
+}
+.profile_input {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 10px;
+  gap: 10px;
+  background-color: #23262D;
+}
+.profile_chart_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #23262D;
+}
 .tab-list {
   font-weight: bold;
-  font-size: 1.5rem;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #b6b6b6;
   padding-left: 40px;
-  box-shadow: var(--shadow2);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
 }
 .tab-list-item {
   display: inline-block;
   list-style: none;
   margin-bottom: -1px;
   padding: 0.5rem 0.75rem;
-  background-color: #ebe7e7;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border: 1px solid #070707;
-  margin-top: 8px;
+  background-color: #515257;
+  border: 1px solid;
 }
 .tab-list-active {
-  background-color: rgba(126, 123, 123, 0.548);
-  border: 1px solid #070707;
+  background-color: #23262D;
+  border: 1px solid #b6b6b6;
   border-width: 1px 1px 0 1px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
 }
 .tab-content {
   display: flex;
+  min-width: 640px;
   flex-direction: column;
   padding: 10px;
-  box-shadow: var(--shadow2);
   gap: 10px;
+}
+.label {
+  display: flex;
+  width: 200px;
+  align-items: center;
+  justify-content: left;
+  font-weight: bold;
+  text-align: left;
+  margin-right: 10px;
+}
+.Input {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 30px;
+  margin-top: 5px;
+}
+.Input_field {
+  width: 50px;
+  text-align: center;
+}
+.data_input {
+  display: grid;
+  grid-template-rows: 30px 160px 60px;
+  align-items: center;
+  padding: 10px ;
+  padding-left: 0px;
+  border-radius: 8px;
+}
+.data_input button {
+  background-color: #99999916;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+  justify-self: center;
+}
+.data_input button:hover {
+  background-color: #01AEF0;
+}
+.data_input h2 {
+  width: 100%;
+  font-size: 1.5em;
+  text-align: center;
+  line-height: 40px;
+  padding: 10px 0;
+}
+.data {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.profile_chart {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 20px);
+  height: calc(50% - 10px);
+}
+.profile_Radar {
+  display: flex;
+  flex-direction: row;
+  width: calc(100% - 20px);
+  height: calc(50% - 10px);
+}
+.profile_table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0 auto;
+  height: 200px;
+  border: 1px solid #515257;
+}
+.profile_table thead th {
+  height: 60px;
+  padding: 0 10px;
+}
+.profile_table th,
+.profile_table td {
+  padding: 0 10px;
+  text-align: center;
+  border-bottom: 1px solid #515257;
+}
+.profile_table th {
+  background-color: #515257;
+  width: 90px;
+}
+.profile_table tr:nth-child(even) {
+  background-color: #99999916;
+}
+.profile_table button {
+  background-color: #515257;
+  border: none;
+  color: white;
+  padding: 4px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 5px 2px;
+  cursor: pointer;
+}
+.profile_table button:hover {
+  background-color: #01AEF0;
+}
+.table-container {
+  display: grid;
+  width: 100%;
+  height: 100%;
 }
