--- a/less/dasboard.less
+++ b/less/dasboard.less
@@ -153,7 +153,7 @@
 }
 
 //==================================================================//
-//                        USSERASIGMENT                             //
+//                        USER-ASIGMENT                             //
 //==================================================================//
 
 .UserCards {
@@ -216,7 +216,6 @@
   width: 100%;
   height: 80px;
   padding: 10px 20px 0 80px;
-  border: 1px solid @yellow;
   justify-content: left;
   align-items: center;
   font-size: 1rem;
