--- a/less/index.less
+++ b/less/index.less
@@ -29,7 +29,7 @@
 
 body {
   background-color: @bgColor;
-  padding: 10px;
+  // padding: 10px;
   color: @Color;
   font-size: 1rem;
   font-family: rajdhani;
