--- a/less/profile.less
+++ b/less/profile.less
@@ -1,16 +1,47 @@
 // out:false
 
+
+
+//==================================================================//
+//                        PROFILE-CSS                               //
+//==================================================================//
+
+.profile {
+  display: flex;  
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+  padding: 10px;
+}
+
+.profile_input {
+  display: flex;
+  flex-direction: column;
+  
+  height: 100%;
+  padding: 10px;  
+  gap: 10px;
+  background-color: @primaryColor;
+  
+ 
+}
+
+.profile_chart_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: @primaryColor;
+}
+
+
 //==================================================================//
 //                        TABS-CSS                                  //
 //==================================================================//
 .tab-list {
   font-weight: bold;
-  font-size: 1.5rem;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid @Color;
   padding-left: 40px;
-  box-shadow: var(--shadow2);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
 }
 
 .tab-list-item {
@@ -18,96 +49,61 @@
   list-style: none;
   margin-bottom: -1px;
   padding: 0.5rem 0.75rem;
-  background-color: rgb(235, 231, 231);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border: 1px solid #070707;
-  margin-top: 8px;
+  background-color: @gray;
+  border: 1px solid;
 }
 
 .tab-list-active {
-  background-color: rgba(126, 123, 123, 0.548);
-  border: 1px solid #070707;
+  background-color: @primaryColor;
+  border: 1px solid @Color;
   border-width: 1px 1px 0 1px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
 }
 
 .tab-content {
   display: flex;
+  min-width: 640px;
   flex-direction: column;
   padding: 10px;
-  box-shadow: var(--shadow2);
   gap: 10px;
 }
 
-
-//==================================================================//
-//                        PROFILE-CSS                               //
-//==================================================================//
-
-
-.profile {
-    display: grid;
-    grid-template-columns: 750px 1fr;
-    width: 100%;
-    height: 100%;
-    gap: 10px;
-    padding: 0px;
-}
-
-.data_entry {
-    display: grid;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;    
-    padding: 10px;
-    overflow-y: auto;
-    gap: 10px;
-    
-}
-
-.profile_chart {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    width: 100%;
-    height: 100%;
-}
-
 .label {
-    display: flex;
-    width: 200px;
-    align-items: center;
-    justify-content: left;
-    font-weight: bold;
-    text-align: left;
+  display: flex;
+  width: 200px;
+  align-items: center;
+  justify-content: left;
+  font-weight: bold;
+  text-align: left;
+  margin-right: 10px;
 }
 
 .Input {
-    display: flex;
-    flex-direction: row;
-    padding: 5px 10px;
-    width: 100%;
-    height: 40px;
+  display: flex;
+  flex-direction: row;  
+  width: 100%;
+  height: 30px;
+  margin-top: 5px;
+  
+  
 }
 
 .Input_field {
-    width: 70px;
+  width: 50px;
+  text-align: center;
+  
 }
 
-.data_imput {
-    display: grid;
-    grid-template-rows: 20px 150px 60px;    
-    align-items: center;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: var(--shadow2);
-    
+.data_input {
+  display: grid;
+  grid-template-rows: 30px 160px 60px;
+  align-items: center;
+  padding: 10px ;
+  padding-left: 0px;
+  border-radius: 8px;
+ 
 
-}
-
-.data_imput button {
-    background-color: #4CAF50;
+  button {
+    background-color: @lightGray;
     border: none;
     color: white;
     padding: 8px 16px;
@@ -118,78 +114,95 @@
     margin: 4px 2px;
     cursor: pointer;
     justify-self: center;
-}
-
-.data_imput h2 {
+    &:hover {
+      background-color: @blue;
+    }
+  }
+  h2 {
+    
     width: 100%;
     font-size: 1.5em;
-    text-align: center;
-    border-bottom: 1px solid #000;
+    text-align: center;    
     line-height: 40px;
+    padding: 10px 0;
+    
+  }
 }
 
 .data {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.profile_linechart {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: 100%;
-
+.profile_chart {
+  display: flex;  
+  flex-direction:column;
+  width: calc(100% - 20px);
+  height: calc(50% - 10px);
+  
 }
-
+.profile_Radar {
+  display: flex;  
+  flex-direction:row;
+  width: calc(100% - 20px);
+  height: calc(50% - 10px);
+  
+}
 
 //==================================================================//
 //                        TABLE-CSS                                  //
 //==================================================================//
 
-
 .profile_table {
-    border-collapse: collapse;
-    width: 100%;
-    margin: 0 auto; 
-    font-size: 1.1rem;
-    box-shadow: var(--shadow2);
-    border-radius: 8px;
-    height: 200px;
-  }
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0 auto;
+  height: 200px;
+  border: 1px solid @gray;
+}
+
+.profile_table thead th {
+  height: 60px;
+  padding: 0 10px;
   
-  .profile_table thead th{
-    padding: 10px;
-    font-size: 1.2rem;
+}
+
+.profile_table th,
+.profile_table td {
+  padding: 0 10px;
+  text-align: center;
+  border-bottom: 1px solid @gray;
+}
+
+.profile_table th {
+  background-color:@gray;
+  width: 90px;
+}
+
+.profile_table tr:nth-child(even) {
+  background-color: @lightGray;
+}
+
+.profile_table button {
+  background-color: @gray;
+  border: none;
+  color: white;
+  padding: 4px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 5px 2px;
+  cursor: pointer;
+  &:hover {
+    background-color: @blue;
   }
+}
+
+.table-container {
+  display: grid;
+  width: 100%;
+  height: 100%;
   
-  .profile_table th, .profile_table td {
-    padding: 5px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-  }
   
-  .profile_table th {
-    background-color: #f2f2f2;
-  }
-  
-  .profile_table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  .profile_table button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
-  
-  .table-container {
-    height: 100%;
-    overflow: auto;
-  }
+}
