--- a/src/index.css
+++ b/src/index.css
@@ -661,3 +661,192 @@ main {
   width: 100%;
   height: 100%;
 }
+.adminContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  background-color: #4a4c4d;
+  padding: 10px;
+}
+.asigmentContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+}
+.asigmentContainer .asigment {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  padding: 10px;
+  background-color: #23262D;
+}
+.asigmentContainer .asigment h2 {
+  font-size: 0.9rem;
+  text-align: center;
+  padding: 5px;
+}
+.asigmentInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  gap: 2px;
+  padding: 5px;
+}
+.asigmentInput .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 1px 0 #01AEF0;
+  background-color: transparent;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #b6b6b6;
+  padding: 4px;
+  width: 30px;
+  height: 30px;
+}
+.asigmentInput .btn:hover {
+  box-shadow: 0 0 3px 0 #01AEF0;
+  text-shadow: 0 0 3px #01AEF0;
+}
+.asigmentInput input {
+  width: 30px;
+  height: 25px;
+  outline: none;
+  border: none;
+  text-align: center;
+}
+.asigmentInput input:focus {
+  box-shadow: 0 0 3px 0 #01AEF0;
+}
+.select {
+  width: 110px;
+  height: 50px;
+  padding: 10px;
+  position: relative;
+  font-size: 0.8rem;
+}
+.option {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  box-shadow: 0 0 1px 0 #01AEF0;
+}
+.option .name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding-right: 20px;
+}
+.option:hover {
+  box-shadow: 0 0 3px 0 #01AEF0;
+}
+.select-clicked {
+  border: 2px solid #6FC308;
+  box-shadow: 0 0 3px 0 #6FC308;
+}
+.menu {
+  list-style: none;
+  padding: 5px;
+  background-color: #23262D;
+  color: #b6b6b6;
+  border-radius: 10px;
+  position: absolute;
+  top: 45px;
+  left: 60px;
+  width: 100%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: all 0.5s ease;
+  box-shadow: 0 0 1px 0 #01AEF0;
+  z-index: 2;
+}
+.menu li {
+  width: 100%;
+  border-radius: 4px;
+  padding: 5px;
+  transition: background-color 0.5s ease;
+  font-size: 0.8rem;
+}
+.menu li:hover,
+.menu li a:hover {
+  color: #01AEF0;
+  background-color: #515257;
+  font-size: 0.85rem;
+}
+.active {
+  background-color: #01AEF0;
+}
+.menu-open {
+  opacity: 1;
+  display: block;
+}
+.UserAsigment {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 10px 0;
+  border-bottom-left-radius: 20px;
+  font-size: 0.8rem;
+}
+.UserAsigment ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 10px 0;
+  background-color: #23262D;
+  list-style: none;
+  border-bottom-left-radius: 20px;
+}
+.UserAsigment ul li {
+  display: flex;
+  align-items: center;
+  padding: 1px;
+}
+.UserAsigment ul li:nth-child(odd) {
+  background-color: #99999916;
+}
+.UserAsigment ul li :nth-child(1) {
+  width: 100%;
+  padding: 0 5px;
+}
+.UserAsigment ul li :nth-child(2) {
+  width: 50;
+  font-weight: 700;
+  padding: 0 5px;
+}
+.UserAsigment ul li .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 1px 0 #01AEF0;
+  background-color: transparent;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #b6b6b6;
+  padding: 4px;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+.UserAsigment ul li .btn:hover {
+  box-shadow: 0 0 3px 0 #01AEF0;
+  text-shadow: 0 0 3px #01AEF0;
+}
